err/collective.templateengines.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/templateengines'...
Listing './lib/python3.5/site-packages/collective/templateengines/backends'...
Compiling './lib/python3.5/site-packages/collective/templateengines/backends/cheetah.py'...
***   File "./lib/python3.5/site-packages/collective/templateengines/backends/cheetah.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/templateengines/backends/djangotemplates.py'...
***   File "./lib/python3.5/site-packages/collective/templateengines/backends/djangotemplates.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/collective/templateengines/backends/jinja.py'...
***   File "./lib/python3.5/site-packages/collective/templateengines/backends/jinja.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/templateengines/context'...
Compiling './lib/python3.5/site-packages/collective/templateengines/context/jinjazope.py'...
***   File "./lib/python3.5/site-packages/collective/templateengines/context/jinjazope.py", line 30
    except Unauthorized, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/templateengines/tests'...
Compiling './lib/python3.5/site-packages/collective/templateengines/utils.py'...
***   File "./lib/python3.5/site-packages/collective/templateengines/utils.py", line 105
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective.templateengines-0.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
